testsuite/tests/th/T21547.stderr
T21547.hs:9:14: error: [GHC-28914]
    • Stage error: instance for ‘ghc-internal-9.1300.0:GHC.Internal.Data.Typeable.Internal.Typeable
                                   T’ is bound at stage {1} but used at stage 0
    • In the expression: foo [|| T () ||]
      In the typed Template Haskell splice: $$(foo [|| T () ||])
      In the expression: $$(foo [|| T () ||])

